k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rrhh-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rrhh-backend
  template:
    metadata:
      labels:
        app: rrhh-backend
    spec:
      containers:
        - name: rrhh-backend
          image: rrhh-backend:latest
          imagePullPolicy: Never # Porque construiremos la imagen localmente en el servidor
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
