k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rrhh-backend-service
spec:
  selector:
    app: rrhh-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
